...
                                <rect key="frame" x="113.66666666666669" y="307.66666666666669" width="163" height="229.00000000000006"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bienvenue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cvo-Sf-QEi">
                                <rect key="frame" x="125" y="94" width="140" height="36"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Accueil" image="house.fill" catalog="system" id="bdJ-Ds-PPN"/>
                    <connections>
                        <outlet property="dayDateLabel" destination="cWr-l2-jGy" id="4Th-Bd-c1h"/>
...
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="articleTableView"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
...
                                <rect key="frame" x="20" y="44" width="350" height="50"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dks-Z8-7kQ">
                                        <rect key="frame" x="15" y="13.666666666666661" width="25" height="23.333333333333336"/>
                                        <color key="tintColor" systemColor="labelColor"/>
...
                                        <rect key="frame" x="55" y="14.666666666666664" width="285" height="21"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="newsSearchBar"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="search"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="News" image="newspaper" catalog="system" id="Bne-YD-i9K"/>
                    <connections>
                        <outlet property="articleTableView" destination="zeU-mS-CKA" id="px6-wV-Z4Z"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nmt-dM-EIm">
                                                <rect key="frame" x="15" y="10" width="30" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="Ffs-gd-qp0"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <state key="normal" title="Site web de l'article">
                                                    <color key="titleColor" systemColor="labelColor"/>
                                                </state>
...
                                <color key="color" systemColor="labelColor"/>
                            </activityIndicatorView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pays des news: Afrique du Sud" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWL-2x-KB5">
                                <rect key="frame" x="55" y="57" width="280" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="newsCountryLabel"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="m1f-eb-aBh" userLabel="settingsChoiceTable">
                                <rect key="frame" x="0.0" y="85.333333333333314" width="390" height="670.66666666666674"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="390" height="761"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="NewsMap"/>
                                </userDefinedRuntimeAttributes>
                            </mapView>
...
                                        <rect key="frame" x="50" y="14.666666666666664" width="285" height="21"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="countrySearchBar"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="search"/>
...
                                        </prototypes>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="AutocompletionTableView"/>
                                        </userDefinedRuntimeAttributes>
                                    </tableView>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Carte du monde" image="map" catalog="system" id="amM-RZ-YJN"/>
                    <connections>
                        <outlet property="autoCompletionView" destination="9iW-Oe-Xix" id="hAe-g0-Oe4"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paramètres" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KM5-RR-476">
                                <rect key="frame" x="129.33333333333331" y="74" width="131.33333333333331" height="31.333333333333329"/>
