...
        }
        
        // On ouvre le navigateur
        guard let url = URL(string: urlSite) else {
            // On affiche une alerte
            let alert = UIAlertController(title: "Erreur", message: "Une erreur est survenue pour l'ouverture du navigateur avec le lien suivant: \(urlSite).", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
            self.present(alert, animated: true)
            
            return
        }
        
        let safari = SFSafariViewController(url: url)
...
